Fixed video autoply on mobile, styling fixes

--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,9 @@
 
 @keyframes blink
 {
-	0%   { opacity: 0; }
-	50%  { opacity: 1; }
-	100% { opacity: 0; }
+	0%   { opacity: 1; }
+	50%  { opacity: 0; }
+	100% { opacity: 1; }
 }
 
 body, html,
@@ -77,7 +77,7 @@ body
 .header
 {
 	width: 400px;
-	margin-top: 100px;
+	margin-top: 10vh;
 	margin-bottom: 300px;
 	display: flex;
 	flex-direction: column;
@@ -206,12 +206,11 @@ body
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-}
-
-.track[data-preview="true"]
-{
 	cursor: pointer;
 }
+
+.track[data-preview="false"] { cursor: initial; pointer-events: none; }
+.track[data-preview="false"] > .track_play { visibility: hidden; }
 
 .track > * + *
 {
@@ -244,12 +243,10 @@ body
 .track_play
 {
 	font-size: 0.7em;
-	visibility: hidden;
 }
 
-.track[data-preview="true"]:hover .track_play
+.track:hover .track_play
 {
-	visibility: visible;
 	animation: blink linear 0.8s infinite;
 }
 
